Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25256

Memory leak in the 64 bit version of the ODBC driver

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.x, 5.0.0
    • 4.7.4
    • SQL Support
    • None
    • Windows 7 64 bit
    • 59ef0ff3aea595f12b9e5117a3552726216db61b

    Description

      The 64 bit ODBC driver has a memory leak issue where the call to SQLGetStmtAttr() will attempt to stick an 8 byte value into a 4 byte container since long types are 4 bytes long on 64 bit Windows

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            zhongle honglei zhang
            shapochniky Yan Shapochnik
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes