Fix for memory leak in 64 bit ODBC driver's call to SQLGetStmtAttr()

Windows API call to SQLGetStmtAttr() attempts to place an 8 byte value
into the isScrollable variable which of type SQLINTEGER which is a long
and is 32 bit on Windows even when the driver is compiled for 64 bit.
Changing the isScrollable to and 8 byte SQLULEN type.

Task-number: QTBUG-25256
Change-Id: I1aae0b306e8d1ff5fc3b293b3e9ddd40546b85ad
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: Janne Anttila <janne.anttila@digia.com>
Reviewed-by: Honglei Zhang <honglei.zhang@nokia.com>