src/sql/drivers/odbc/qsql_odbc.cpp
@@ -1590,7 +1590,8 @@ bool QODBCResult::exec()
         return false;
     }
 
-    SQLINTEGER isScrollable, bufferLength;
+    SQLULEN isScrollable = 0;
+    SQLINTEGER bufferLength;
     r = SQLGetStmtAttr(d->hStmt, SQL_ATTR_CURSOR_SCROLLABLE, &isScrollable, SQL_IS_INTEGER, &bufferLength);
     if(r == SQL_SUCCESS || r == SQL_SUCCESS_WITH_INFO)
         QSqlResult::setForwardOnly(isScrollable==SQL_NONSCROLLABLE);
